// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeaderCell matches snapshot (basic) 1`] = `
<TableHeaderCell
  ascendingOrder={false}
  columnIndex={0}
  dataKey="Data key field"
  label="Header cell label"
  onChange={[Function]}
  onClick={[Function]}
  searchable={false}
  sortColumnIndex={0}
  sortable={false}
  value={null}
  width={1}
>
  <Memo(TableHeaderCell)
    cursor="auto"
    flexGrow={1}
  >
    <ForwardRef(TableCell)
      borderBottom={null}
      cursor="auto"
      flexGrow={1}
      overflow="visible"
    >
      <ForwardRef(Pane)
        alignItems="center"
        borderBottom={null}
        boxSizing="border-box"
        className="css-saeo60"
        cursor="auto"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        onKeyDown={[Function]}
        overflow="visible"
        paddingX={12}
      >
        <Box
          alignItems="center"
          borderBottom={null}
          boxSizing="border-box"
          className="css-saeo60 css-nil"
          cursor="auto"
          display="flex"
          flex={1}
          flexGrow={1}
          flexShrink={0}
          is="div"
          onKeyDown={[Function]}
          overflow="visible"
          paddingX={12}
        >
          <div
            className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_visible ub-ovflw-y_visible ub-flx-grow_1 ub-crsr_auto"
            onKeyDown={[Function]}
          >
            <ForwardRef(Heading)
              onClick={[Function]}
              size={500}
            >
              <Box
                boxSizing="border-box"
                color="#234361"
                fontFamily="\\"SF UI Text\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
                fontSize="16px"
                fontWeight={500}
                is="h2"
                letterSpacing="-0.05px"
                lineHeight="20px"
                marginBottom={0}
                marginTop={0}
                onClick={[Function]}
              >
                <h2
                  className="ub-mt_0px ub-mb_0px ub-fnt-sze_16px ub-f-wght_500 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-fnt-fam_b77syt ub-color_234361 ub-box-szg_border-box"
                  onClick={[Function]}
                >
                  Header cell label
                </h2>
              </Box>
            </ForwardRef(Heading)>
          </div>
        </Box>
      </ForwardRef(Pane)>
    </ForwardRef(TableCell)>
  </Memo(TableHeaderCell)>
</TableHeaderCell>
`;

exports[`TableHeaderCell matches snapshot (searchable and sortable) 1`] = `
<TableHeaderCell
  ascendingOrder={true}
  columnIndex={0}
  dataKey="Data key field"
  label="Header cell label"
  onChange={[MockFunction]}
  onClick={[MockFunction]}
  searchable={true}
  sortColumnIndex={0}
  sortable={true}
  value=""
  width={1}
>
  <Memo(TableHeaderCell)
    cursor="auto"
    flexGrow={1}
  >
    <ForwardRef(TableCell)
      borderBottom={null}
      cursor="auto"
      flexGrow={1}
      overflow="visible"
    >
      <ForwardRef(Pane)
        alignItems="center"
        borderBottom={null}
        boxSizing="border-box"
        className="css-saeo60"
        cursor="auto"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        onKeyDown={[Function]}
        overflow="visible"
        paddingX={12}
      >
        <Box
          alignItems="center"
          borderBottom={null}
          boxSizing="border-box"
          className="css-saeo60 css-nil"
          cursor="auto"
          display="flex"
          flex={1}
          flexGrow={1}
          flexShrink={0}
          is="div"
          onKeyDown={[Function]}
          overflow="visible"
          paddingX={12}
        >
          <div
            className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_visible ub-ovflw-y_visible ub-flx-grow_1 ub-crsr_auto"
            onKeyDown={[Function]}
          >
            <ForwardRef(SearchInput)
              border="muted"
              onChange={[Function]}
              placeholder="Header cell label"
              size={500}
              value=""
              width="100%"
            >
              <Box
                border="muted"
                boxSizing="border-box"
                display="inline-flex"
                height={32}
                is="div"
                position="relative"
                width="100%"
              >
                <div
                  className="ub-pst_relative ub-dspl_inline-flex ub-h_32px ub-w_100prcnt ub-b-btm_muted ub-b-lft_muted ub-b-rgt_muted ub-b-top_muted ub-box-szg_border-box"
                >
                  <Box
                    alignItems="center"
                    boxSizing="border-box"
                    display="flex"
                    height={32}
                    is="div"
                    justifyContent="center"
                    pointerEvents="none"
                    position="absolute"
                    width={32}
                  >
                    <div
                      className="ub-h_32px ub-w_32px ub-ptr-evts_none ub-pst_absolute ub-dspl_flex ub-just-cnt_center ub-algn-itms_center ub-box-szg_border-box"
                    >
                      <ForwardRef(SearchIcon)
                        color="default"
                        size={12}
                        zIndex={3}
                      >
                        <ForwardRef(Icon)
                          color="default"
                          name="search"
                          size={12}
                          svgPaths16={
                            Array [
                              "M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z",
                            ]
                          }
                          svgPaths20={
                            Array [
                              "M19.56 17.44l-4.94-4.94A8.004 8.004 0 0016 8c0-4.42-3.58-8-8-8S0 3.58 0 8s3.58 8 8 8c1.67 0 3.21-.51 4.5-1.38l4.94 4.94a1.498 1.498 0 102.12-2.12zM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z",
                            ]
                          }
                          zIndex={3}
                        >
                          <Box
                            boxSizing="border-box"
                            data-icon="search"
                            height={12}
                            is="svg"
                            style={
                              Object {
                                "fill": "#66788A",
                              }
                            }
                            viewBox="0 0 16 16"
                            width={12}
                            zIndex={3}
                          >
                            <svg
                              className="ub-z-idx_3 ub-w_12px ub-h_12px ub-box-szg_border-box"
                              data-icon="search"
                              style={
                                Object {
                                  "fill": "#66788A",
                                }
                              }
                              viewBox="0 0 16 16"
                            >
                              <path
                                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                                fillRule="evenodd"
                                key="0"
                              />
                            </svg>
                          </Box>
                        </ForwardRef(Icon)>
                      </ForwardRef(SearchIcon)>
                    </div>
                  </Box>
                  <ForwardRef(TextInput)
                    appearance="default"
                    height={32}
                    onChange={[Function]}
                    paddingLeft={32}
                    placeholder="Header cell label"
                    size={500}
                    type="search"
                    value=""
                    width="100%"
                  >
                    <ForwardRef(Text)
                      aria-invalid={false}
                      borderRadius={3}
                      className="css-5ljhhe"
                      disabled={false}
                      height={32}
                      is="input"
                      onChange={[Function]}
                      paddingLeft={32}
                      paddingRight={10}
                      placeholder="Header cell label"
                      size={500}
                      spellCheck={true}
                      type="search"
                      value=""
                      width="100%"
                    >
                      <Box
                        aria-invalid={false}
                        borderRadius={3}
                        boxSizing="border-box"
                        className="css-5ljhhe"
                        color="#425A70"
                        disabled={false}
                        fontFamily="\\"SF UI Text\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
                        fontSize="16px"
                        fontWeight={400}
                        height={32}
                        is="input"
                        letterSpacing="-0.05px"
                        lineHeight="20px"
                        onChange={[Function]}
                        paddingLeft={32}
                        paddingRight={10}
                        placeholder="Header cell label"
                        spellCheck={true}
                        type="search"
                        value=""
                        width="100%"
                      >
                        <input
                          aria-invalid={false}
                          className="css-5ljhhe ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_16px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-w_100prcnt ub-h_32px ub-pl_32px ub-pr_10px ub-bblr_3px ub-bbrr_3px ub-btlr_3px ub-btrr_3px ub-box-szg_border-box"
                          disabled={false}
                          onChange={[Function]}
                          placeholder="Header cell label"
                          spellCheck={true}
                          type="search"
                          value=""
                        />
                      </Box>
                    </ForwardRef(Text)>
                  </ForwardRef(TextInput)>
                </div>
              </Box>
            </ForwardRef(SearchInput)>
            <ForwardRef(Pane)
              paddingLeft={8}
            >
              <Box
                boxSizing="border-box"
                className="css-nil"
                is="div"
                paddingLeft={8}
              >
                <div
                  className="css-nil ub-pl_8px ub-box-szg_border-box"
                >
                  <ForwardRef(Icon)
                    cursor="pointer"
                    icon="sort-asc"
                    onClick={[Function]}
                  />
                </div>
              </Box>
            </ForwardRef(Pane)>
          </div>
        </Box>
      </ForwardRef(Pane)>
    </ForwardRef(TableCell)>
  </Memo(TableHeaderCell)>
</TableHeaderCell>
`;

exports[`TableHeaderCell matches snapshot (searchable) 1`] = `
<TableHeaderCell
  ascendingOrder={false}
  columnIndex={0}
  dataKey="Data key field"
  label="Header cell label"
  onChange={[MockFunction]}
  onClick={[Function]}
  searchable={true}
  sortColumnIndex={0}
  sortable={false}
  value=""
  width={1}
>
  <Memo(TableHeaderCell)
    cursor="auto"
    flexGrow={1}
  >
    <ForwardRef(TableCell)
      borderBottom={null}
      cursor="auto"
      flexGrow={1}
      overflow="visible"
    >
      <ForwardRef(Pane)
        alignItems="center"
        borderBottom={null}
        boxSizing="border-box"
        className="css-saeo60"
        cursor="auto"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        onKeyDown={[Function]}
        overflow="visible"
        paddingX={12}
      >
        <Box
          alignItems="center"
          borderBottom={null}
          boxSizing="border-box"
          className="css-saeo60 css-nil"
          cursor="auto"
          display="flex"
          flex={1}
          flexGrow={1}
          flexShrink={0}
          is="div"
          onKeyDown={[Function]}
          overflow="visible"
          paddingX={12}
        >
          <div
            className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_visible ub-ovflw-y_visible ub-flx-grow_1 ub-crsr_auto"
            onKeyDown={[Function]}
          >
            <ForwardRef(SearchInput)
              border="muted"
              onChange={[Function]}
              placeholder="Header cell label"
              size={500}
              value=""
              width="100%"
            >
              <Box
                border="muted"
                boxSizing="border-box"
                display="inline-flex"
                height={32}
                is="div"
                position="relative"
                width="100%"
              >
                <div
                  className="ub-pst_relative ub-dspl_inline-flex ub-h_32px ub-w_100prcnt ub-b-btm_muted ub-b-lft_muted ub-b-rgt_muted ub-b-top_muted ub-box-szg_border-box"
                >
                  <Box
                    alignItems="center"
                    boxSizing="border-box"
                    display="flex"
                    height={32}
                    is="div"
                    justifyContent="center"
                    pointerEvents="none"
                    position="absolute"
                    width={32}
                  >
                    <div
                      className="ub-h_32px ub-w_32px ub-ptr-evts_none ub-pst_absolute ub-dspl_flex ub-just-cnt_center ub-algn-itms_center ub-box-szg_border-box"
                    >
                      <ForwardRef(SearchIcon)
                        color="default"
                        size={12}
                        zIndex={3}
                      >
                        <ForwardRef(Icon)
                          color="default"
                          name="search"
                          size={12}
                          svgPaths16={
                            Array [
                              "M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z",
                            ]
                          }
                          svgPaths20={
                            Array [
                              "M19.56 17.44l-4.94-4.94A8.004 8.004 0 0016 8c0-4.42-3.58-8-8-8S0 3.58 0 8s3.58 8 8 8c1.67 0 3.21-.51 4.5-1.38l4.94 4.94a1.498 1.498 0 102.12-2.12zM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z",
                            ]
                          }
                          zIndex={3}
                        >
                          <Box
                            boxSizing="border-box"
                            data-icon="search"
                            height={12}
                            is="svg"
                            style={
                              Object {
                                "fill": "#66788A",
                              }
                            }
                            viewBox="0 0 16 16"
                            width={12}
                            zIndex={3}
                          >
                            <svg
                              className="ub-z-idx_3 ub-w_12px ub-h_12px ub-box-szg_border-box"
                              data-icon="search"
                              style={
                                Object {
                                  "fill": "#66788A",
                                }
                              }
                              viewBox="0 0 16 16"
                            >
                              <path
                                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                                fillRule="evenodd"
                                key="0"
                              />
                            </svg>
                          </Box>
                        </ForwardRef(Icon)>
                      </ForwardRef(SearchIcon)>
                    </div>
                  </Box>
                  <ForwardRef(TextInput)
                    appearance="default"
                    height={32}
                    onChange={[Function]}
                    paddingLeft={32}
                    placeholder="Header cell label"
                    size={500}
                    type="search"
                    value=""
                    width="100%"
                  >
                    <ForwardRef(Text)
                      aria-invalid={false}
                      borderRadius={3}
                      className="css-5ljhhe"
                      disabled={false}
                      height={32}
                      is="input"
                      onChange={[Function]}
                      paddingLeft={32}
                      paddingRight={10}
                      placeholder="Header cell label"
                      size={500}
                      spellCheck={true}
                      type="search"
                      value=""
                      width="100%"
                    >
                      <Box
                        aria-invalid={false}
                        borderRadius={3}
                        boxSizing="border-box"
                        className="css-5ljhhe"
                        color="#425A70"
                        disabled={false}
                        fontFamily="\\"SF UI Text\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
                        fontSize="16px"
                        fontWeight={400}
                        height={32}
                        is="input"
                        letterSpacing="-0.05px"
                        lineHeight="20px"
                        onChange={[Function]}
                        paddingLeft={32}
                        paddingRight={10}
                        placeholder="Header cell label"
                        spellCheck={true}
                        type="search"
                        value=""
                        width="100%"
                      >
                        <input
                          aria-invalid={false}
                          className="css-5ljhhe ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_16px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-w_100prcnt ub-h_32px ub-pl_32px ub-pr_10px ub-bblr_3px ub-bbrr_3px ub-btlr_3px ub-btrr_3px ub-box-szg_border-box"
                          disabled={false}
                          onChange={[Function]}
                          placeholder="Header cell label"
                          spellCheck={true}
                          type="search"
                          value=""
                        />
                      </Box>
                    </ForwardRef(Text)>
                  </ForwardRef(TextInput)>
                </div>
              </Box>
            </ForwardRef(SearchInput)>
          </div>
        </Box>
      </ForwardRef(Pane)>
    </ForwardRef(TableCell)>
  </Memo(TableHeaderCell)>
</TableHeaderCell>
`;

exports[`TableHeaderCell matches snapshot (sortable) 1`] = `
<TableHeaderCell
  ascendingOrder={true}
  columnIndex={0}
  dataKey="Data key field"
  label="Header cell label"
  onChange={[Function]}
  onClick={[MockFunction]}
  searchable={false}
  sortColumnIndex={0}
  sortable={true}
  value={null}
  width={1}
>
  <Memo(TableHeaderCell)
    cursor="pointer"
    flexGrow={1}
  >
    <ForwardRef(TableCell)
      borderBottom={null}
      cursor="pointer"
      flexGrow={1}
      overflow="visible"
    >
      <ForwardRef(Pane)
        alignItems="center"
        borderBottom={null}
        boxSizing="border-box"
        className="css-saeo60"
        cursor="pointer"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        onKeyDown={[Function]}
        overflow="visible"
        paddingX={12}
      >
        <Box
          alignItems="center"
          borderBottom={null}
          boxSizing="border-box"
          className="css-saeo60 css-nil"
          cursor="pointer"
          display="flex"
          flex={1}
          flexGrow={1}
          flexShrink={0}
          is="div"
          onKeyDown={[Function]}
          overflow="visible"
          paddingX={12}
        >
          <div
            className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_visible ub-ovflw-y_visible ub-flx-grow_1 ub-crsr_pointer"
            onKeyDown={[Function]}
          >
            <ForwardRef(Heading)
              onClick={[Function]}
              size={500}
            >
              <Box
                boxSizing="border-box"
                color="#234361"
                fontFamily="\\"SF UI Text\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
                fontSize="16px"
                fontWeight={500}
                is="h2"
                letterSpacing="-0.05px"
                lineHeight="20px"
                marginBottom={0}
                marginTop={0}
                onClick={[Function]}
              >
                <h2
                  className="ub-mt_0px ub-mb_0px ub-fnt-sze_16px ub-f-wght_500 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-fnt-fam_b77syt ub-color_234361 ub-box-szg_border-box"
                  onClick={[Function]}
                >
                  Header cell label
                </h2>
              </Box>
            </ForwardRef(Heading)>
            <ForwardRef(Pane)
              paddingLeft={8}
            >
              <Box
                boxSizing="border-box"
                className="css-nil"
                is="div"
                paddingLeft={8}
              >
                <div
                  className="css-nil ub-pl_8px ub-box-szg_border-box"
                >
                  <ForwardRef(Icon)
                    cursor="pointer"
                    icon="sort-asc"
                    onClick={[Function]}
                  />
                </div>
              </Box>
            </ForwardRef(Pane)>
          </div>
        </Box>
      </ForwardRef(Pane)>
    </ForwardRef(TableCell)>
  </Memo(TableHeaderCell)>
</TableHeaderCell>
`;
